# pycharm-multiple-src-roots

./: LICENSE  main.py
explo1/src/: main.py
explo1/src/ul/eia/explo1/extractor/: drill.py
explo2/: pyproject.toml
explo2/src/: main.py
explo2/src/ul/eia/explo2/tntitanizer/: charge.py
explo3/first_test/src/ul/eia/test1/look/: grab.py
explo3/second_test/src/ul/eia/test2/clean/: wash.py
explo4_with_really_long_path/src/ul/eia/explo4_with_really_long_path/the_absolute_vilainator/: why.py
