[tool.poetry]
name = "explo1"
packages = [
    { include = "ul/eia/explo1/hello", from="src/" },
]
version = "0.0.0"
description = "blabla"
authors = [
    "Pierre-Yves Langlois <pierre-yves.langlois@dti.ulaval.ca>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pylanglois/pycharm-multiple-src-roots"

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.poetry.dependencies]
python = ">=3.11"
